All warnings have been removed (out of internal deprecation)